--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-title {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  margin-top: 17vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 100px;
+  color: #010101;
+}
+
+.deck-size-label {
+  margin: 0;
+  padding-bottom: 20px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+}
+
+.deck-size-form {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.deck-size-select {
+  margin: 0 auto;
+  width: 125px;
+  height: 58px;
+  background-color: white;
+  justify-content: center;
+  align-items: center;
+  padding-left: 15px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.start-button {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  height: 60px;
+  width: 200px;
+  font-weight: 600;
+  font-size: 20px;
+  background-color: #ff5222;
   color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-rules {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: rgb(122, 122, 122);
 }
