--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,10 @@
 .header {
   padding: 0 40px;
-  height: 80px;
+  min-height: 80px;
   background-color: #171717;
   display: grid;
+  grid-template-columns: 170px 0.6fr 170px 1fr;
+  align-content: center;
   align-items: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.494);
 }
@@ -10,4 +12,10 @@
 .header img {
   height: 57px;
   width: auto;
+}
+
+.header-title {
+  color: rgb(191, 191, 191);
+  display: grid;
+  justify-content: end;
 }
