--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   padding: 0 40px;
   min-height: 80px;
-  background-color: #171717;
+  background-color: hsl(0, 0%, 9%);
   display: grid;
   grid-template-columns: 170px 0.6fr 170px 1fr;
   align-content: center;
@@ -9,7 +9,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.494);
 }
 
-.header img {
+.header-logo {
   height: 57px;
   width: auto;
 }
@@ -18,4 +18,11 @@
   color: rgb(191, 191, 191);
   display: grid;
   justify-content: end;
+}
+
+@media screen and (max-width: 768) {
+  .header {
+    display: flex;
+    padding: 0 40px;
+  }
 }
